# MakerDock

./: .gitignore  CMakeLists.txt  MakerDock.kdev4  README
.kdev4/: MakerDock.kdev4
src/: MakerDock.cpp  MakerDock.hpp  MakerDockItem.cpp  MakerDockItem.hpp  MakerDockRootItem.cpp  MakerDockRootItem.hpp  MakerDockWinItem.cpp  MakerDockWinItem.hpp  main.cpp  makerdock.cpp  makerdock.h  makerdock.ui  utils.hpp
